--- a/article_joss/paper.bib
+++ b/article_joss/paper.bib
@@ -1,195 +1,94 @@
-
-@article{Computationalepidemiology2013,
-  	Author = {{Marathe}, M. and {Vullikanti}, A. K. S.},
-  	Doi = { https://doi.org/10.1145/2483852.2483871},
-  	Journal = {Communications of the ACM},
-    	Month = jul,
-  	Title = {{Computational Epidemiology}},
-  	Year = 2013,
-        Volume = 56,
-        Number= 7,
-        Address = New York, NY, USA,
-                  Issn = {0001-0782}
+@unpublished{Abdulrahman:2020,
+    author = {Abdulrahman, I.},
+    title = {{SimCOVID}: Open-Source Simulation Programs for the {COVID-19} Outbreak},
+    year = {2020},
+    note={https://doi.org/10.1101/2020.04.13.20063354}
 }
 
-@article{Brauer2017,
-  	Author = {{ Brauer}, F.},
-  	Doi = {10.1016/j.idm.2017.02.001},
-  	Journal = {Infectious Disease Modelling},
-    	Month = feb,
-  	Title = {{Mathematical epidemiology: Past, present, and future}},
-        Year = 2017,
-        Volume = 2
-}
+@misc{Adhikari:2020,
+    author={Adhikari, R. and Bolitho, A. and Caballero, F. and Cates, M. E. and Dolezal, J. and Ekeh, T. and Guioth, J. and Jack, R. L. and Kappler, J. and Kikuchi, L. and Kobayashi, H. and Li, Y. I. and Peterson, J. D. and Pietzonka, P. and Remez, B. and Rohrbach, P. B. and Singh, R. and Turk, G.},
+    title={Inference, prediction and optimization of non-pharmaceutical interventions using compartment models: the {PyRoss} library},
+    eprint={arXiv: 2005.09625},
+    year={2020},
+    note={https://arxiv.org/abs/2005.09625}
+} 
 
-@article{hamer1906,
-  	Author = {{Hamer}, W. H. and {MA} and {Cantab}, M.D. and {Lond}, F.R.C.P.} ,
-  	Doi = { https://doi.org/10.1016/S0140-6736(01)80187-2},
-  	Journal = { The Lancet },
-  	Title = {{The Milroy Lectures on Epidemic Disease in England—The  Evidence of Variability and of Persistency of Type}},
-  	Year = 1906,
-        Volume = 167,
-        Number= 4305,
-        Pages = 569-574,
-                  Issn = {0140-6736}
-}
-
-@article{ ross1911,
-  	Author = {{Ross}, R.A.},
-  	Doi = { https://doi.org/10.1145/2483852.2483871},
-  	Journal = {London: John Murray},
-  	Title = {{The prevention of malaria (with Addendum)}},
-  	Year = 1911
-}
-
-@article{ Kermack1927,
-  	Author = {{Kermack}, W.O. and {McKendrick}, A.G. and {Walker}, G.T.},
-  	Doi = { http://doi.org/10.1098/rspa.1927.0118},
-  	Journal = { Proc. R. Soc. Lond.},
-  	Title = {{ A contribution to the mathematical theory of epidemics }},
-  	Year = 1927,
-        Volume = 115,
-        Pages = {700–721}
-        
-}
-
-@article{ Kermack1932,
-  	Author = {{Kermack}, W.O. and {McKendrick}, A.G. and {Walker}, G.T.},
-  	Doi = { http://doi.org/10.1098/rspa.1932.0171},
-  	Journal = { Proc. R. Soc. Lond.},
-  	Title = {{ Contributions to the mathematical theory of epidemics. II. —The problem of endemicity }},
-  	Year = 1932,
-        Volume = 138,
-        Pages = {55-83}
-        
-}
-
-
-@article{ Kermack1933,
-  	Author = {{Kermack}, W.O. and {McKendrick}, A.G. and {Walker}, G.T.},
-  	Doi = { http://doi.org/10.1098/rspa.1933.0106},
-  	Journal = { Proc. R. Soc. Lond.},
-  	Title = {{Contributions to the mathematical theory of epidemics. III.—Further studies of the problem of endemicity}},
-  	Year = 1933,
-        Volume = 141,
-        Pages = {94–122}
-        
-}
-
-@article{Tameru2012TheRO,
-  	Author = {{ Tameru}, B. and { Nganwa}, D. and {Bogale}, A. And {Robnett}, V. and {Habtemariam}, T.},
-  	Journal = {Journal of AIDS & clinical research},
-  	Title = {{ The Role of Computational Epidemiology and Risk Analysis in the Fight Against HIV/AIDS}},
-  	Year = 2012,
-        Volume = 36
-        
-}
-
-@article{ RecentAdvances2013,
-  	Author = {{ Marathe}, M.V. and {Ramakrishnan}, N.}, 
-  	Journal = { IEEE Intelligent Systems},
-  	Title = {{ Recent Advances in Computational Epidemiology}},
-  	Year = 2013,
-        Volume = 28,
-        Number = 4,
-        Pages = 96-101       
-}
-
-@unpublished{ simcovid,
-  	Author = {{ Abdulrahman}, I.}, 
-  	Title = {{SimCOVID}: Open-Source Simulation Programs for the {COVID-19} Outbreak}},
-  	Year = 2020,
-        Month = may,
-        Number = 4,
-        Doi = { https://doi.org/10.1101/2020.04.13.20063354}       
-}
-
-
-
-@article{ adhikari2020inference,
-  	Author = {{ Adhikari }, R. and et. al.} ,
-  	Title = {{ Inference, prediction and optimization of non-pharmaceutical interventions using compartment models: the PyRoss library}},
-  	Year = 2020,
-        archivePrefix = {arXiv},
-                 primaryClass = {q-bio.PE},
-
-    eprint = {2005.09625}
-}
-
-@article{ DANTAS2018249,
-  	Author = {{ Dantas }, E. and {Tosin}, M. And {Cunha Jr}, A.},
-  	Doi = { https://doi.org/10.1016/j.amc.2018.06.024},
-  	Journal = { Applied Mathematics and Computation},
-  	Title = {{ Calibration of a SEIR–SEI epidemic model to describe the Zika virus outbreak in Brazil}},
-  	Year = 2018,
-        Volume = 338,
-        Pages = 249-259,
-                  Issn = {0096-3003}
-}
-
-@article{EpiFire,
-  	Author = {{ Hladish }, T. and { Melamud}, E. and { Barrera}, L. And { Galvani}, A. And {Meyers}, L. },
-  	Doi = { 10.1186/1471-2105-13-76},
-  	Journal = {BMC Bioinformatics},
-  	Title = {{ EpiFire: An open source {C++} library and application for contact network epidemiology}},
-  	Year = 2012,
-        Volume = 13,
-        Pages = {76},
-        Month = May,
-                  Issn = {0096-3003}
-}
-
-@book{octave,
-  	Author = {{ Eaton}, J.W.},
-  	Publisher = {Network Theory Limited},
-  	Title = {{GNU Octave Manual}},
-  	Year = 2002,
-        Isbn = {0-9541617-2-6}
-}
-
-
-@online{towards,
-  	Author = {{ Chatterjee }, N.},
-         Site = { Towards data science},
-  	Title = {Transparency, Reproducibility, and Validity of {COVID-19} Projection Models},
-                  Year = 2020,
-                  Url = {https://towardsdatascience.com/transparency-reproducibility-and-validity-of-covid-19-projection-models-78592e029f28},
-                  Urldate = {2020-06-30}
-}
-
-
-
-@book{Neter1996,
-  Added-at = {2011-03-14T01:05:37.000+0100},
-  Address = {Chicago},
-  Author = {{Neter}, J. and {Kutner}, M. H. and {Nachtsheim}, C. J. and {Wasserman}, W.},
-  Biburl = {https://www.bibsonomy.org/bibtex/2e27d10c7eb8f3933c67670be61d6aa15/lantiq},
-  Publisher = {Irwin},
-  Title = {Applied Linear Statistical Models},
-  Year = {1996}
+ @online{Chatterjee:2020,
+    author = {Chatterjee, N.},
+    site = {Towards Data Science},
+    title = {Transparency, Reproducibility, and Validity of {COVID-19} Projection Models},
+    year = {2020},
+    url = {https://towardsdatascience.com/transparency-reproducibility-and-validity-of-covid-19-projection-models-78592e029f28},
+    urldate = {2020-06-30}
 }
 
 @online{covid19-rj,
-  Title = {COVID-19: Observatório Fluminense (COVID19RJ)},
-  Year = {2020},
-  Url = {https://www.covid19rj.org/},
-  Urldate = {2020-08-30}
+    title = {{COVID-19}: {O}bservatório {F}luminense},
+    year = {2020},
+    note = {https://www.covid19rj.org},
+    urldate = {2020-08-30}
 }
 
+@article{Dantas:2018,
+    author = {Dantas, E. and Tosin, M. and {Cunha Jr}, A.},
+    title = {Calibration of a {SEIR–SEI} epidemic model to describe the {Z}ika virus outbreak in {B}razil},
+    journal = {Applied Mathematics and Computation},
+    volume = {338},
+    pages = {249 - 259},
+    year = {2018},
+    note = {https://doi.org/10.1016/j.amc.2018.06.024}
+} 
 
+@book{Eaton:2002,
+    author = {Eaton, J. W.},
+    title = {GNU Octave Manual},
+    publisher = {Network Theory Limited},
+    year = {2002}
+}
+       
+@article{Hladish:2012,
+    author = {Hladish, T. and Melamud, E. and Barrera, L. and Galvani, A. and Meyers, L.},
+    title = {{EpiFire}: {A}n open source {C++} library and application for contact network epidemiology},
+    journal = {BMC Bioinformatics},
+    volume = {13},
+    pages = {76},
+    year = {2012},
+    note = {10.1186/1471-2105-13-76}
+}  
 
-@article{Rebecca2020,
-Author = {{Morrison}, R. and {Cunha Jr}, A.},
-Year = {2020},
-Month = May,
-pages = {051103},
-title = {Embedded model discrepancy: A case study of Zika modeling},
-volume = {30},
-Number = 5,
-Journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
-Publisher={AIP Publishing},
-Doi = {http://dx.doi.org/10.1063/5.0005204},
-ISSN = {1089-7682},
+@article{Marathe:2013,
+    author={Marathe, M. V. and Ramakrishnan, N.},
+    title={Recent Advances in Computational Epidemiology},
+    journal={IEEE Intelligent Systems}, 
+    volume={28},
+    pages={96-101},
+    year={2013}
 }
 
+@article{Morrison:2020,
+    author={Morrison, R. E. and {Cunha Jr}, A.},
+    title={Embedded model discrepancy: a case study of {Z}ika modeling},
+    journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+    year={2020},
+    volume={30},
+    pages={051103},
+    note = {http://dx.doi.org/10.1063/5.0005204}
+}
 
+@book{Neter:1996,  
+    author = {Neter, J. and Kutner, M. H. and Nachtsheim, C. J. and Wasserman, W.},
+    title = {Applied Linear Statistical Models},
+    publisher = {Irwin},
+    timestamp = {2011-08-28T03:10:19.000+0200},
+    added-at = {2011-03-14T01:05:37.000+0100},
+    address = {Chicago},
+    year = {1996}
+}
+
+@article{Tameru:2012,
+    author={Tameru, B. and Nganwa, D. and Bogale, A. and Robnett, V. and Habtemariam, T.},
+    title={The Role of Computational Epidemiology and Risk Analysis in the Fight Against {HIV/AIDS}},
+    journal={Journal of AIDS \& Clinical Research},
+    volume={36}, 
+    year={2012}
+}
