--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,14 +1,14 @@
 
 @article{Computationalepidemiology2013,
   	Author = {{Marathe}, M. and {Vullikanti}, A. K. S.},
-  	Doi = { https://doi.org/10.1145/2483852.2483871},
+  	Doi = {https://doi.org/10.1145/2483852.2483871},
   	Journal = {Communications of the ACM},
-    	Month = jul,
+    	Month = {jul},
   	Title = {{Computational Epidemiology}},
-  	Year = 2013,
-        Volume = 56,
-        Number= 7,
-        Address = New York, NY, USA,
+  	Year = {2013},
+        Volume = {56},
+        Number= {7},
+        Address = {New York, NY, USA},
                   Issn = {0001-0782}
 }
 
