--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -18,14 +18,14 @@
     site = {Towards Data Science},
     title = {Transparency, Reproducibility, and Validity of {COVID-19} Projection Models},
     year = {2020},
-    url = {https://towardsdatascience.com/transparency-reproducibility-and-validity-of-covid-19-projection-models-78592e029f28},
+    url = {encurtador.com.br/dgno9},
     urldate = {2020-06-30}
 }
 
 @online{covid19-rj,
     title = {{COVID-19}: {O}bservatório {F}luminense},
     year = {2020},
-    note = {https://www.covid19rj.org},
+    url= {https://www.covid19rj.org},
     urldate = {2020-08-30}
 }
 
