--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,11 +1,11 @@
-@unpublished{Abdulrahman:2020,
+@unpublished{Abdulrahman2020,
     author = {Abdulrahman, I.},
     title = {{SimCOVID}: Open-Source Simulation Programs for the {COVID-19} Outbreak},
     year = {2020},
     note={https://doi.org/10.1101/2020.04.13.20063354}
 }
 
-@misc{Adhikari:2020,
+@misc{Adhikari2020,
     author={Adhikari, R. and Bolitho, A. and Caballero, F. and Cates, M. E. and Dolezal, J. and Ekeh, T. and Guioth, J. and Jack, R. L. and Kappler, J. and Kikuchi, L. and Kobayashi, H. and Li, Y. I. and Peterson, J. D. and Pietzonka, P. and Remez, B. and Rohrbach, P. B. and Singh, R. and Turk, G.},
     title={Inference, prediction and optimization of non-pharmaceutical interventions using compartment models: the {PyRoss} library},
     eprint={arXiv: 2005.09625},
@@ -13,7 +13,7 @@
     note={https://arxiv.org/abs/2005.09625}
 } 
 
- @online{Chatterjee:2020,
+ @online{Chatterjee2020,
     author = {Chatterjee, N.},
     site = {Towards Data Science},
     title = {Transparency, Reproducibility, and Validity of {COVID-19} Projection Models},
@@ -29,7 +29,7 @@
     urldate = {2020-08-30}
 }
 
-@article{Dantas:2018,
+@article{Dantas2018,
     author = {Dantas, E. and Tosin, M. and {Cunha Jr}, A.},
     title = {Calibration of a {SEIR–SEI} epidemic model to describe the {Z}ika virus outbreak in {B}razil},
     journal = {Applied Mathematics and Computation},
@@ -39,14 +39,14 @@
     note = {https://doi.org/10.1016/j.amc.2018.06.024}
 } 
 
-@book{Eaton:2002,
+@book{Eaton2002,
     author = {Eaton, J. W.},
     title = {GNU Octave Manual},
     publisher = {Network Theory Limited},
     year = {2002}
 }
        
-@article{Hladish:2012,
+@article{Hladish2012,
     author = {Hladish, T. and Melamud, E. and Barrera, L. and Galvani, A. and Meyers, L.},
     title = {{EpiFire}: {A}n open source {C++} library and application for contact network epidemiology},
     journal = {BMC Bioinformatics},
@@ -56,7 +56,7 @@
     note = {10.1186/1471-2105-13-76}
 }  
 
-@article{Marathe:2013,
+@article{Marathe2013,
     author={Marathe, M. V. and Ramakrishnan, N.},
     title={Recent Advances in Computational Epidemiology},
     journal={IEEE Intelligent Systems}, 
@@ -75,7 +75,7 @@
     note = {http://dx.doi.org/10.1063/5.0005204}
 }
 
-@book{Neter:1996,  
+@book{Neter1996,  
     author = {Neter, J. and Kutner, M. H. and Nachtsheim, C. J. and Wasserman, W.},
     title = {Applied Linear Statistical Models},
     publisher = {Irwin},
@@ -85,7 +85,7 @@
     year = {1996}
 }
 
-@article{Tameru:2012,
+@article{Tameru2012,
     author={Tameru, B. and Nganwa, D. and Bogale, A. and Robnett, V. and Habtemariam, T.},
     title={The Role of Computational Epidemiology and Risk Analysis in the Fight Against {HIV/AIDS}},
     journal={Journal of AIDS \& Clinical Research},
