--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -2,7 +2,8 @@
     author = {Abdulrahman, I.},
     title = {{SimCOVID}: Open-Source Simulation Programs for the {COVID-19} Outbreak},
     year = {2020},
-    note={https://doi.org/10.1101/2020.04.13.20063354}
+    url = {https://doi.org/10.1101/2020.04.13.20063354},
+    urldate = {2021-02-07}
 }
 
 @misc{Adhikari2020,
@@ -10,7 +11,8 @@
     title={Inference, prediction and optimization of non-pharmaceutical interventions using compartment models: the {PyRoss} library},
     eprint={arXiv: 2005.09625},
     year={2020},
-    note={https://arxiv.org/abs/2005.09625}
+    url={https://arxiv.org/abs/2005.09625},
+    urldate = {2021-02-07}
 } 
 
  @online{Chatterjee2020,
@@ -36,7 +38,8 @@
     volume = {338},
     pages = {249 - 259},
     year = {2018},
-    note = {https://doi.org/10.1016/j.amc.2018.06.024}
+    url = {https://doi.org/10.1016/j.amc.2018.06.024},
+    urldate = {2021-02-07}
 } 
 
 @book{Eaton2002,
@@ -53,7 +56,8 @@
     volume = {13},
     pages = {76},
     year = {2012},
-    note = {10.1186/1471-2105-13-76}
+    url = {https://doi.org/10.1186/1471-2105-13-76},
+    urldate = {2021-02-07}
 }  
 
 @article{Marathe2013,
@@ -62,7 +66,9 @@
     journal={IEEE Intelligent Systems}, 
     volume={28},
     pages={96-101},
-    year={2013}
+    year={2013},
+    url = {https://doi.org/10.1109/MIS.2013.114},
+    urldate = {2021-02-07}
 }
 
 @article{Morrison:2020,
@@ -72,7 +78,8 @@
     year={2020},
     volume={30},
     pages={051103},
-    note = {http://dx.doi.org/10.1063/5.0005204}
+    url = {https://doi.org/10.1063/5.0005204},
+    urldate = {2021-02-07}
 }
 
 @book{Neter1996,  
@@ -90,7 +97,9 @@
     title={The Role of Computational Epidemiology and Risk Analysis in the Fight Against {HIV/AIDS}},
     journal={Journal of AIDS \& Clinical Research},
     volume={36}, 
-    year={2012}
+    year={2012},
+    url = {https://doi.org/10.4172/2155-6113.1000e107},
+    urldate = {2021-02-07}
 }
 
 
