--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -71,7 +71,7 @@
     urldate = {2021-02-07}
 }
 
-@article{Morrison:2020,
+@article{Morrison2020,
     author={Morrison, R. E. and {Cunha Jr}, A.},
     title={Embedded model discrepancy: a case study of {Z}ika modeling},
     journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
